see source code and the LICENSE file


2. Changelog
------------
This is a non-exhaustive (but still near complete) changelog for
Joomla! 1.6, 1.7 and 2.5, including alpha and beta versions.
Our thanks to all those people who've contributed bug reports and
code fixes.

Legend:

* -> Security Fix
# -> Issue Fix
$ -> Language fix or change
+ -> Addition
^ -> Change
- -> Removed
! -> Note

16-Jun-2012 Mark Dexter
 # [#27267] Multiple Loggers fail when using formattedtext (Shaun Maunder)
 # [#28411] Site breaks when deleting alternate style which is in use (Christophe Demko)
 # [#27737] Clean up the unit tests (Rouven Weßling)

16-Jun-2012 Christophe Demko
 # [#28673] JSON data returned when uploading oversized file (Jonathan Chang)

16-Jun-2012 Jean-Marie Simonet
 $ Updating installation ini file pl-PL
 ^ [#28644] Move JApplicationHelper::parseXMLInstallFile to JInstaller. Thanks Rouven.
 ^ [#28649] Backport small changes to the MVC from the platform. Thanks Rouven

15-Jun-2012 Christophe Demko
 # [#28670] SQL error when installing trunk without sample data (Ofer Cohen)

15-Jun-2012 Jean-Marie Simonet
 $ Updating installation ini file sy-IQ + missing strings in en-AU, en-US and gu-IN
 + [#28629] Multi-File Upload. Thanks Elijah
 $ Updating installation ini files: af-ZA, be-BY, el-GR, gl-ES, he-IL
 + [#28617] Add buttons in each menu selection tab in the module admin manager. Thanks Mathieu
 # [#28592] Language in component folder. Thanks Lao

14-Jun-2012 Christophe Demko
 ^ [#28667] Update TinyMCE to version 3.5.2 (Rouven Weßling)

14-Jun-2012 Jean-Marie Simonet
 $ Updating installation ini file ca-ES

13-Jun-2012 Jean-Marie Simonet
 $ Updating installation ini file fa-IR

12-Jun-2012 Jean-Marie Simonet
 # [#28660] Fix code style errors. Thanks Jenkins and Rouven
 # [#28632] Backport JCrypt (only with the simple chipher). Thanks Rouven
 + [#28371] Improve user feedback during automatic version update. Thanks Mark